--- a/13/amazon.html
+++ b/13/amazon.html
@@ -57,6 +57,6 @@
       </div>
     </div>
     <script src="data/products.js"></script>
-    <script src="/scripts/amazon.js"></script>
+    <script src="data/amazon.js"></script>
   </body>
 </html>
