--- a/14/Amazon Project/checkout.html
+++ b/14/Amazon Project/checkout.html
@@ -76,7 +76,7 @@
             <div class="payment-summary-money js-total-row">$0.00</div>
           </div>
 
-          <button class="place-order-button button-primary">
+          <button class="place-order-button js-place-order-button button-primary">
             Place your order
           </button>
         </div>
