--- a/14/Amazon Project/orders.html
+++ b/14/Amazon Project/orders.html
@@ -53,7 +53,7 @@
 
     <div class="main">
       <div class="page-title">Your Orders</div>
-      <div class="orders-grid js-order-grid-2">
+      <div class="orders-grid js-order-grid">
       </div>
     </div>
 
