--- a/test.html
+++ b/test.html
@@ -6,6 +6,8 @@
     </style>
   </head>
   <body>
-    <script src="./test.js"></script>
+    <div id="root">
+      <script src="./test2.js"></script>
+    </div>
   <body>
 </html>
